--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2010-04-23 (23 APR 2010)  VERSION 3.0.5  Aaron D. Gifford (http://www.aarongifford.com)
+ * Double bug-fix (typo fix and logic fix) to request.rb thanks to Allan Eising and 
+   Søren Daugaard.  Thank you both for the patch!
+ * Added a brief sanity-check in request.rb to help spotlight logic errors.
+
 2010-04-09 (09 APR 2010)  VERSION 3.0.4  Aaron D. Gifford (http://www.aarongifford.com)
  * Bug fix to lib/mtik.rb thanks to Allan Eising to the command validation regular
    expression to permit the '-' character in a command.  Thanks!
